Refactor + Introduction of DateTimeProvider